# illuminati

./: CMakeLists.txt  README.md  frag.glsl  vert.glsl
joysticks/: innext_snes.yml
src/: App.cpp  App.h  Image.cpp  Image.h  Joystick.cpp  Joystick.h  JoystickManager.cpp  JoystickManager.h  MathUtil.cpp  MathUtil.h  Result.h  ShaderProgram.cpp  ShaderProgram.h  Size.cpp  Size.h  Webcam.cpp  Webcam.h  main.cpp
